Version: 0.4.2
  - Space Exploration did not work with assembler productivity, now it does
-------------------------------------------------------
Version: 0.4.1
  - Fix initial crafting counts from testing
-------------------------------------------------------
Version: 0.4.0
  - Thanks to idea from unhott in alien-module: increased Performance of mod by iterating over chunks instead of updating everything at once
-------------------------------------------------------
Version: 0.3.2
  - Thanks to CaitSith2: Leveled Entities are now hidden in "made in" Tooltip
-------------------------------------------------------
Version: 0.3.1
  - Thanks to CaitSith2: Refactoring of Code
  - Thanks to CaitSith2: Construction via bots also works now
-------------------------------------------------------
Version: 0.3.0
  - Thanks to CaitSith2: External API for adding entities to leveling
-------------------------------------------------------
Version: 0.2.5
  - Bugfix: Spilling of input is fixed now
-------------------------------------------------------
Version: 0.2.3
  - Fix bug: Levels of entities could exceed max level for entity
-------------------------------------------------------
Version: 0.2.2
  - fix bug
-------------------------------------------------------
Version: 0.2.1
  - Buildings now start with proper level on constructon if stored levels allow for it
  - Buildings now level up instantly to the proper level
-------------------------------------------------------
Version: 0.2.0
  - New Levelup mechanic: More productivity on levelup
  - New Levelup mechanic: Additional modules slots at certain levels (20 for Assembler 1; 20 and 40 for Assembler 2 and 25, 50, 75 and 100 for Assembler 3)
  - All levelup mechanics configurable separately via mod settings
  - Leveling exponent configurable via mod setting (lower is faster)
-------------------------------------------------------
Version: 0.1.5
  - fix pipette and blueprint items for leveled entities